# anilibria-winmaclinux

./: .gitignore  CONTRIBUTING.md  README.md  appimagedeps.py  cinemahall.md  createtheme.md  extensions.md  fedora.md  flake.nix  flatpak-build.md  libvlcwindowsfixes.md  linuxmint20.md  macosbuild.md  mpv.md  nix.md  openSUSE.md  ownfilter.md  postmarketos.md  qtmirrors.md  remoteprotocol.md  repackdeb.md  sharetheme.md  swallowvideoparts.md  torrentstream.md  tv.anilibria.anilibria.appdata.xml  tv.anilibria.app.yml  unstable.md  voidlinux.md
src/: AniLibria.pro  CMakeLists.txt  Main.qml  anilibria.desktop  anilibria.icns  anilibriaService.js  fp.prr  fullsizesicon.rc  globalconstants.h  globalconstants.h~RFb6b66.TMP  globalhelpers.cpp  globalhelpers.h  main.cpp  main.qml  parseReleases.js  qml.qrc  snowflake.qml
src/Classes/: customstyle.cpp  customstyle.h  globalconstant.cpp  globalconstant.cpp~RFbef3c.TMP
src/Classes/ListModels/: allmyanilibrialistmodel.cpp  allmyanilibrialistmodel.h  alphabetlistmodel.cpp  alphabetlistmodel.h  cinemahalllistmodel.cpp  cinemahalllistmodel.h  commoncomboboxlistmodel.cpp  commoncomboboxlistmodel.h  commonmenulistmodel.cpp  commonmenulistmodel.h  dowloadedtorrentslistmodel.cpp  dowloadedtorrentslistmodel.h  externalthemeslistmodel.cpp  externalthemeslistmodel.h  localthemeslistmodel.cpp  localthemeslistmodel.h  mainmenulistmodel.cpp  mainmenulistmodel.h  myanilibrialistmodel.cpp  myanilibrialistmodel.h  myanilibriasearchlistmodel.cpp  myanilibriasearchlistmodel.h  onlineplayervideolist.cpp  onlineplayervideolist.h  popupnotificationvideolist.cpp  popupnotificationvideolist.h  qthemefieldlistmodel.cpp  qthemefieldlistmodel.h  releasecardmenulistmodel.cpp  releasecardmenulistmodel.h  releaseonlineserieslistmodel.cpp  releaseonlineserieslistmodel.h  releaseseriescardlistmodel.cpp  releaseseriescardlistmodel.h  releaseserieslistmodel.cpp  releaseserieslistmodel.h  releasesimplelistmodel.cpp  releasesimplelistmodel.h  releaseslistmodel.cpp  releaseslistmodel.h  (+6 more)
src/Classes/Models/: apitorrentmodel.cpp  apitorrentmodel.h  changesmodel.cpp  changesmodel.h  downloadedtorrentmodel.cpp  downloadedtorrentmodel.h  downloaditemmodel.cpp  downloaditemmodel.h  downloadqueueitemmodel.cpp  downloadqueueitemmodel.h  externalapplicationmodel.cpp  externalapplicationmodel.h  externalplaylistvideo.cpp  externalplaylistvideo.h  fullreleasemodel.cpp  fullreleasemodel.h  historymodel.cpp  historymodel.h  mainmenuitemmodel.cpp  mainmenuitemmodel.h  notificationmodel.cpp  notificationmodel.h  onlinevideomodel.cpp  onlinevideomodel.h  pagebackgroundmodel.cpp  pagebackgroundmodel.h  releasemodel.cpp  releasemodel.h  releaseonlinevideomodel.cpp  releaseonlinevideomodel.h  releaseseriesmodel.cpp  releaseseriesmodel.h  releasetorrentmodel.cpp  releasetorrentmodel.h  seenmarkmodel.cpp  seenmarkmodel.h  seenmodel.cpp  seenmodel.h  themeitemmodel.cpp  themeitemmodel.h  (+4 more)
src/Classes/RemotePlayer/: externalplayerbase.cpp  externalplayerbase.h  remoteplayer.cpp  remoteplayer.h  remoteplayerchannel.cpp  remoteplayerchannel.h  remoteplayerclientwrapper.cpp  remoteplayerclientwrapper.h  remoteplayertransport.cpp  remoteplayertransport.h  rutubeexternalplayer.cpp  rutubeexternalplayer.h  websocketexternalplayer.cpp  websocketexternalplayer.h
src/Classes/Servers/: videoproxyserver.cpp  videoproxyserver.h
src/Classes/Services/: analyticsservice.cpp  analyticsservice.h  anilibriaapiservice.cpp  anilibriaapiservice.h  apiserviceconfigurator.cpp  apiserviceconfigurator.h  applicationsettings.cpp  applicationsettings.h  applicationversionchecker.cpp  applicationversionchecker.h  dlservice.cpp  dlservice.h  downloadmanager.cpp  downloadmanager.h  imageloader.cpp  imageloader.h  localcachechecker.h  localstorageservice.cpp  osextras.cpp  (+16 more)
src/Controls/: AccentText.qml  AppPanelButton.qml  BackgroundImagePopup.qml  ColoredIcon.qml  CommonComboBox.qml  CommonMenu.qml  CommonMenuItem.qml  CommonMenuModel.qml  CommonSwitch.qml  CommonTextField.qml  CorneredImage.qml  DefaultPopup.qml  DictionaryComboBox.qml  EmptyBoxArea.qml  ExpandableHeader.qml  IconButton.qml  InfoAboutPlayer.qml  InfoAboutSynchronization.qml  InfoAboutTorrentStream.qml  InfoForNewcomers.qml  LinkedText.qml  MessageModal.qml  NavigationScrollButton.qml  PlainText.qml  Qt6SystemOpenFolderDialog.qml  Qt6SystemSaveFileDialog.qml  ReleaseOnlineVideosList.qml  ReleaseSeriesList.qml  ReleasesList.qml  RoundedActionButton.qml  RoundedTextBox.qml  SystemColorDialog.qml  SystemOpenFileDialog.qml  SystemOpenFolderDialog.qml  SystemSaveFileDialog.qml  ToggleButton.qml  TooltipedImage.qml
src/CustomStyle/: BoxShadow.qml  ComboBox.qml  CursorDelegate.qml  Drawer.qml  ElevationEffect.qml  Label.qml  Menu.qml  MenuItem.qml  Popup.qml  RectangularGlow.qml  Switch.qml  SwitchIndicator.qml  TextField.qml  ToolTip.qml  qmldir
src/CustomStyleQt6/: BoxShadow.qml  ComboBox.qml  CursorDelegate.qml  Drawer.qml  ElevationEffect.qml  Menu.qml  MenuItem.qml  Popup.qml  RectangularGlow.qml  Switch.qml  ToolTip.qml
src/PlayerMpv/: mpvobject.cpp  mpvobject.h
src/Theme/: ApplicationTheme.qml  qmldir
src/Views/: About.qml  Applications.qml  Authorization.qml  Cinemahall.qml  Donate.qml  Downloads.qml  Extensions.qml  ExtensionsCard.qml  ExternalPlayerWindow.qml  FilterPanelIconButton.qml  LeftPanelIconButton.qml  Maintenance.qml  MyAnilibria.qml  MyAnilibria.qml~RF35c2210a.TMP  MyAnilibria.qml~RFaa8efba.TMP  OnlinePlayer.qml  OnlinePlayerWindow.qml  QtAvPlayer.qml  QtAvVideoOutput.qml  QtPlayer.qml  QtVideoOutput.qml  ReleaseAlphabeticalCharacters.qml  ReleaseCard.qml  ReleaseCustomGroups.qml  ReleaseItem.qml  ReleasePosterPreview.qml  ReleaseSeries.qml  ReleaseSeriesCard.qml  Releases.qml  ThemeManager.qml  ThemeManagerPreview.qml  TorrentStream.qml  TorrentStreamCard.qml  VkCommentsWindow.qml  Youtube.qml
src/autoupdater/: Cargo.toml  build.rs
src/macos-mpv/: libmpv.2.dylib
src/vlc-qt/: compileshaders.bat  fragment.frag  fragment.shader  vertex.vert  vlc-qt-license.txt
src/windows-mpv/: libmpv-2.def  libmpv.dll.exp  libmpv.dll.lib
(+248 files in other folders)
